Dark mode: Fix black links on focus

--- a/app/static/css/darktheme.css
+++ b/app/static/css/darktheme.css
@@ -402,7 +402,7 @@
     color: #FFFFFF !important;
 }
 
-[data-theme=dark] a:hover {
+[data-theme=dark] a:hover, [data-theme=dark] a.text-dark:active, [data-theme=dark] a:focus {
     color: #FFFFFF !important;
 }
 
